log/build_2024-09-29_22-40-23/tb_control/stdout_stderr.log
running egg_info
writing ../../build/tb_control/tb_control.egg-info/PKG-INFO
writing dependency_links to ../../build/tb_control/tb_control.egg-info/dependency_links.txt
writing entry points to ../../build/tb_control/tb_control.egg-info/entry_points.txt
writing requirements to ../../build/tb_control/tb_control.egg-info/requires.txt
writing top-level names to ../../build/tb_control/tb_control.egg-info/top_level.txt
reading manifest file '../../build/tb_control/tb_control.egg-info/SOURCES.txt'
writing manifest file '../../build/tb_control/tb_control.egg-info/SOURCES.txt'
running build
running build_py
copying tb_control/tb_openLoop.py -> /home/kyle/testWS/build/tb_control/build/lib/tb_control
running install
running install_lib
copying /home/kyle/testWS/build/tb_control/build/lib/tb_control/tb_openLoop.py -> /home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control
byte-compiling /home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control/tb_openLoop.py to tb_openLoop.cpython-38.pyc
  File "/home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control/tb_openLoop.py", line 110
    break
    ^
SyntaxError: 'break' outside loop

running install_data
running install_egg_info
removing '/home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/tb_control/tb_control.egg-info to /home/kyle/testWS/install/tb_control/lib/python3.8/site-packages/tb_control-0.0.0-py3.8.egg-info
running install_scripts
Installing tb_openLoop script to /home/kyle/testWS/install/tb_control/lib/tb_control
writing list of installed files to '/home/kyle/testWS/build/tb_control/install.log'
